salvando alteracoes antes de iniciar git flow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5435/remindpay
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
 
+# Hibernate / JPA
 quarkus.hibernate-orm.database.generation=update
 
 
@@ -22,11 +23,6 @@ quarkus.mailer.password=ldvabdncuuqrvtwt
 quarkus.mailer.from=gisele.screen@gmail.com
 quarkus.mailer.starttls=true
 quarkus.mailer.ssl=false
-
-
-vonage.api.key=4fa673af
-vonage.api.secret=aGkKUuSJaQnsor17
-vonage.from.name=RemindPay
 
 quarkus.log.category."io.quarkus.security".level=DEBUG
 quarkus.log.category."io.smallrye.jwt".level=DEBUG
@@ -51,3 +47,13 @@ mp.jwt.verify.issuer=remindpay
 mp.jwt.verify.publickey.location=publicKey.pem
 smallrye.jwt.sign.key.location=privateKey.pem
 smallrye.jwt.algorithm=RS256
+
+
+infobip-api/mp-rest/url=https://nmk43e.api.infobip.com
+infobip-api/mp-rest/headers=Authorization=App 5ea0c3e82ffb459753754aa9a40a266b-439b6965-f19a-48b0-beec-5a82f5037a67
+
+
+quarkus.rest-client.logging.scope=request-response
+quarkus.rest-client.logging.body=true
+
+quarkus.log.category."org.jboss.resteasy.reactive.client".level=DEBUG
