--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #configuracao bancos de dados
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5435/remindpay
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
+quarkus.datasource.jdbc.url=${DB_URL:jdbc:postgresql://localhost:5435/remindpay}
+quarkus.datasource.username=${DB_USER:postgres}
+quarkus.datasource.password=${DB_PASS:postgres}
 
 # Hibernate / JPA
 quarkus.hibernate-orm.database.generation=update
