feat:  adicionando variavel no application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,3 +57,5 @@ quarkus.rest-client.logging.scope=request-response
 quarkus.rest-client.logging.body=true
 
 quarkus.log.category."org.jboss.resteasy.reactive.client".level=DEBUG
+
+reminder.cron=0 30 17 * * ?
