--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=${DB_URL:jdbc:postgresql://localhost:5435/remindpay}
 quarkus.datasource.username=${DB_USER:postgres}
 quarkus.datasource.password=${DB_PASS:postgres}
+quarkus.datasource.jdbc.max-size=5
+quarkus.datasource.jdbc.min-size=1
+quarkus.datasource.jdbc.acquisition-timeout=30000
 
 # Hibernate / JPA
 quarkus.hibernate-orm.database.generation=update
