--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,5 +60,6 @@ quarkus.rest-client.logging.scope=request-response
 quarkus.rest-client.logging.body=true
 
 quarkus.log.category."org.jboss.resteasy.reactive.client".level=DEBUG
+quarkus.log.category."org.hibernate".level=DEBUG
 
 reminder.cron=0 30 17 * * ?
