--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ quarkus.http.port=${PORT:8080}
 # Configuração Banco de Dados
 # ===========================
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5435/remindpay
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
+quarkus.datasource.jdbc.url=${DB_URL:jdbc:postgresql://localhost:5435/remindpay}
+quarkus.datasource.username=${DB_USER:postgres}
+quarkus.datasource.password=${DB_PASS:postgres}
 quarkus.datasource.jdbc.max-size=5
 quarkus.datasource.jdbc.min-size=1
 quarkus.datasource.jdbc.acquisition-timeout=30000
@@ -96,6 +96,6 @@ infobip-api/mp-rest/headers=Authorization=App 5ea0c3e82ffb459753754aa9a40a266b-4
 # ===========================
 # Cron reminder (agendamento)
 # ===========================
-reminder.cron=0 30 19 * * ?  # 19:30 UTC = 16:30 BRT
+reminder.cron=0 50 19 * * ?  # 19:50 UTC = 16:50 BRT
 
 
