Corrige expressao cron do agendamento de lembretes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -96,6 +96,7 @@ infobip-api/mp-rest/headers=Authorization=App 5ea0c3e82ffb459753754aa9a40a266b-4
 # ===========================
 # Cron reminder (agendamento)
 # ===========================
-reminder.cron=0 50 19 * * ?  # 19:50 UTC = 16:50 BRT
+reminder.cron=50 13 * * *
 
+quarkus.scheduler.time-zone=America/Sao_Paulo
 
